@@ -5,7 +5,7 @@ Released under the GNU GPL, see the COPYING file
 in the source distribution for its full text.
 */
 
-#define _GNU_SOURCE
+#include "config.h"
 #include "String.h"
 #include <string.h>
 #include <strings.h>
@@ -17,10 +17,6 @@ in the source distribution for its full text.
 /*{
 #define String_startsWith(s, match) (strstr((s), (match)) == (s))
 }*/
-
-inline char* String_copy(const char* orig) {
-   return strdup(orig);
-}
 
 char* String_cat(const char* s1, const char* s2) {
    int l1 = strlen(s1);
